SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    13 Aug 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150813b
Tag Summary: Introduce a new module to help CSEG handle testing when answer-
             changing branch tags are merged back to the trunk. There is now
             a namelist variable named lchange_ans and we encourage developers
             to use the following workflow:
             * branch_000 should be bit-for-bit with trunk
             * branch_001 should have code structured like
                  if (lchange_ans) then
                    call new_code
                  else
                    call old_code
                  end if
               Note that this makes branch_001 + lchange_ans=F bit-for-bit with
               branch_000
             * branch_002 should remove the lchange_ans if statement and use
               only the new code. Note that branch_001 + lchange_ans=T should
               be bit-for-bit with branch_002
             * CSEG will make a trunk tag based on branch_001 first and ensure
               it is bit-for-bit with lchange_ans=F
             * CSEG will then follow up with a trunk tag based on branch_002
               and ensure it is bit-for-bit with the previous trunk tag +
               lchange_ans=T

Files Modified:
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop.xml
M       bld/namelist_files/namelist_definition_pop.xml
M       source/initial.F90
A       source/software_eng_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  huyong
Tag Date:    13 Aug 2015
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20150813a
Tag Summary: Patch bug in barotropic solver that we worked around on May 20th.
             Now the new solver should work on all decompositions, including